--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.4",
     "@types/charset": "^1.0.5",
+    "@types/lodash": "^4.17.17",
     "@vueuse/core": "^10.11.0",
     "@vueuse/nuxt": "^10.11.0",
     "axios": "^1.7.2",
@@ -29,6 +30,7 @@
     "cheerio": "^1.0.0-rc.12",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "lodash": "^4.17.21",
     "pinia": "^3.0.3",
     "puppeteer": "^24.10.0",
     "vue": "^3.4.31",
